# git-storyteller

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
storyteller/: api.py  git_dag.py
storyteller/parser/: js_diff.py  js_funcs.py  js_symbols.py
tests/: test_api.py  test_ast.py  test_ast_diff.py
